Updated the left and right section so they are saving more resources

--- a/css/App.css
+++ b/css/App.css
@@ -50,3 +50,21 @@
   cursor: -webkit-grabbing;
   cursor: grabbing;
 }
+
+.card-text-section{
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  width: 100px;
+  max-width: 100px;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.hidden{
+  background: green;
+  display: none;
+}
